<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.edu.udea.compumovil.gr01_20171.proyectoescuela.Vista.SegCogEstudiante">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <ImageView
                android:id="@+id/iv_seg_cog_foto_estudiante"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/ic_launcher" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_seg_cog_nombre_estudiante"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="Materia"
                android:textSize="@dimen/titulo_1_size"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"/>

            <Spinner
                android:id="@+id/sp_seg_cog_materias"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cat_aplicar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/aplicar"
                android:textAlignment="center"
                android:textColor="@color/titulo_categoria_cognitivo"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_add_aplicar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparente"
                android:onClick="clickAgregarSubAplicar"
                android:src="@drawable/ic_plus_circle_white_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cat_analizar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/analizar"
                android:textAlignment="center"
                android:textColor="@color/titulo_categoria_cognitivo"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_add_analizar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparente"
                android:onClick="clickAgregarSubAnalizar"
                android:src="@drawable/ic_plus_circle_white_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cat_comprender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/comprender"
                android:textAlignment="center"
                android:textColor="@color/titulo_categoria_cognitivo"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_add_comprender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparente"
                android:onClick="clickAgregarSubComprender"
                android:src="@drawable/ic_plus_circle_white_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cat_crear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/crear"
                android:textAlignment="center"
                android:textColor="@color/titulo_categoria_cognitivo"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_add_crear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparente"
                android:onClick="clickAgregarSubCrear"
                android:src="@drawable/ic_plus_circle_white_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cat_recordar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/recordar"
                android:textAlignment="center"
                android:textColor="@color/titulo_categoria_cognitivo"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_add_recordar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparente"
                android:onClick="clickAgregarSubRecordar"
                android:src="@drawable/ic_plus_circle_white_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/evaluar"
                android:textAlignment="center"
                android:textColor="@color/titulo_categoria_cognitivo"
                android:textStyle="bold" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparente"
                android:onClick="clickAgregarSubEvaluar"
                android:src="@drawable/ic_plus_circle_white_24dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/contenedor_seg_cog_aplicar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv_aplicar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ListView
                android:id="@+id/lv_analizar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ListView
                android:id="@+id/lv_compreder"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ListView
                android:id="@+id/lv_crear"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ListView
                android:id="@+id/lv_recordar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ListView
                android:id="@+id/lv_evaluar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
